write locations